Prevent widget from getting too wide for mobile

--- a/src/iframe/css/style.css
+++ b/src/iframe/css/style.css
@@ -84,7 +84,7 @@ a:hover {
 }
 
 .modal, #form {
-  width: 532px;
+  max-width: 532px;
 }
 
 .modal > main {
